--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "next": "^14.1.0",
+    "next-fonts": "^1.5.1",
+    "pliny": "^0.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-paginate": "^8.2.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
